[tool.poetry]
name = "repl_pygame_IgnitionHacks-2021"
version = "0.1.0"
description = ""
authors = ["AidanHuang2 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"
helper = "^2.5.0"
ipython = "^7.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
